fix: text of on mobile

--- a/src/app/components/ExperienceBox/ExperienceBox.module.css
+++ b/src/app/components/ExperienceBox/ExperienceBox.module.css
@@ -4,7 +4,7 @@
     flex-direction: row;
     justify-content: start;
     align-items: center;
-    gap: 1rem;
+    gap: 10px;
     background-color: rgb(247, 247, 247);
     border-radius: 10px;
     padding: 10px;
@@ -38,7 +38,7 @@
 }
 
 .bg p {
-    font-size: small;
+    font-size: 0.7rem;
     margin: 0;
 }
 
